Johans' edits part 1

--- a/report/layout/preface.tex
+++ b/report/layout/preface.tex
@@ -1,12 +1,13 @@
 \chapter*{Preface}
 \label{chap:preface}
 %Preface goes here...
-This report is written by six students from the Department of Computer Science at Aalborg University, and is a project under the subject ''Internet of Things''. The four students are studying as Software Engineers at their 7th semester.\\
+This report is written by six students from the Department of Computer Science at Aalborg University, and is a project under the subject ''Internet of Things''. The six students are studying as Software Engineers at their 7th semester.\\
 \\
 This report serves as a suggestion of how to moderate children's increasing use of media.\\
 \\
 Included with this report, there is a CD containing the project's Git repository. Which contains the report, source code of the system as well as the graphic assets used in the project.\\
 \\
 The group would like to personally thank:\\
+Hua Lu our counselor.
 %Ulrik Nyman for great input and support during the project.\\
 %Mette Als for her patience and valuable input into the designing of the system.\\
