--- a/report/text/newAnalysis.tex
+++ b/report/text/newAnalysis.tex
@@ -4,7 +4,7 @@ Research also shows that this increase in media usage have consequences for the 
 \\
 In this report we give a suggestion towards a solution to control this problem, by expanding on the concept of Parental Control over electronic devices.
 
-\section{Terminology}
+\section{Terms}
 In this section keywords are explained, in order to easier understand the report.\\
 \\
 \textbf{Smart Home} can refer to multiple forms of improvement on a home. Most commonly is: home automation, environment friendly improvements and power saving improvements. In this report we will only regard Smart Home in relation to home automation.\\
@@ -25,7 +25,7 @@ If this tendency is not dealt with, the risk of children getting type 2 diabetes
 
 \section{Parental Control - How to extend it}
 \label{section:pcHowToExtend}
-As previously mentioned parental control is commonly found in televisions, computers and internet-browsers. But none of these tools are meant to limit the usage of a device totally, they are able to do so, but it will result in parents having to enter passwords for their children every time they need to use the device.\fixme{Maybe add a reference? -Jakob} \\
+As previously mentioned parental control is commonly found in televisions, computers and internet-browsers. But none of these tools are meant to limit the usage of a device totally, they are able to do so, but it will result in parents having to enter passwords for their children every time they need to use the device. An example of this could be Windows Login system.\\
 The idea behind this project, is to extend the normal parental control, so that a child has a limited usage of media, without having the constant interaction from parents. 
 %For the idea to be an improvement upon the existing parental control, it must be able to give the parents control over their children's media usage without forcing the parents to be around constantly. (lisbeth: this repeat the line above)
 But simply restricting a child's media usage is not enough, for the idea to work. We believe it is also necessary to inspire the child to physical activity, e.g. by helping out at the house.\\
@@ -40,7 +40,7 @@ This, coupled with the subject of this report, ''Internet of Things'' have lead 
 	\item A way to inspire children to physical activity
 \end{enumerate}
 
-After having figured out what the key features of the system should be, we started brainstorming how to implement them.\\
+After having figured out what the key features of the system should be, the project group started brainstorming how to implement them.\\
 The 1st and 2nd feature is best maintained from a website with a graphical interface. This is due to the complexity of the idea and the realization that simplifying permissions and rules into something a machine would understand is a hard task and an even harder one for non-computer graduate, more information on how we implemented rules can be read in section \vref{sec:rule}.\\
 Among other solutions could have been a desktop- or phone application.\\
 \\
@@ -53,7 +53,7 @@ More about the chosen identification can be found in chapter \vref{chap:hardware
 We have also taken into account that we want the system to be able to decide if a media device is to be allowed to turn on, without having to involve a parent. This means that the identification of a child will have to be sufficient information to make that decision.\\
 %we discussed if a mobile phone would be a good way to identify children, but this would encourage children to further use of electronic media, simply by giving them a mobile phone in the first place. We therefor came up with the idea to use RFID or NFC, to create small tags, which could be embedded into jewelry or key chains to identify the child.\\
 \\
-For feature no. 5 we made serious considerations about how to motivate children in a way that will go along with the idea of the parental control system. We have come up with the idea of implementing chores into the system. We believe that if a sort of point system is used to determine how much time a child will be able to use on electronic media per week. Then a way to obtain extra points could be to do chores. Meaning if the child has a habit of spending a lot of time using electronic media, the only way to obtain more time will be to do chores. Chores that could consist of moving the lawn or other physical exercises.\\
+For feature no. 5 we made considerations about how to motivate children in a way that will go along with the idea of the parental control system. We have come up with the idea of implementing chores into the system. We believe that if a sort of point system is used to determine how much time a child will be able to use on electronic media per week. Then a way to obtain extra points could be to do chores. Meaning if the child has a habit of spending a lot of time using electronic media, the only way to obtain more time will be to do chores. Chores that could consist of moving the lawn or other physical exercises.\\
 
 This idea then boils down to these 3 key aspects:
 
@@ -63,4 +63,4 @@ This idea then boils down to these 3 key aspects:
 	\item A website to set up rules, permissions and view/modify allowed usage of electronic media
 \end{itemize} 
 
-what follows is a formal description of the problem, in the form of the problem statement followed by a more detailed explanation of how the system is designed and implemented.
+What follows is a formal description of the problem, in the form of the problem statement followed by a more detailed explanation of how the system is designed and implemented.
