--- a/report/text/newGeneralDesignConcepts.tex
+++ b/report/text/newGeneralDesignConcepts.tex
@@ -50,7 +50,7 @@ An overview of the actions and their name is listed below:
 	\item[Access controller] it will give the profile access to a specific media. 
 	\item[Cannot access controller] it will block the user from using a specific media. 
 \end{description}
-
+\fixme{Bette describtion of differens between Block user and Cannot access any controller}
 Two designs have been made over rule. The first design is explained in the appendix \vref{appendixFirstRuleDesign}. The final design is of the rule is explained later in this section. The main difference is that in the first design is an extra type of condition timestamp. But late into the implementation of MOM we found that it would not be needed and therefor reworked the design, into what follows.\\
 \\
 The rule's structure is presented in a grammar in listing	\ref{grammar2} expressed in Extended Backus-Naur Form(EBNF) \citep{CoPL}.
