--- a/report/text/testCases.tex
+++ b/report/text/testCases.tex
@@ -4,7 +4,7 @@ This chapter contain all the testcases which has been tested in the Media-Online
 %%Tests to Perform.
 
 %testcases using the website and controller
-These cases uses both the website and the controller:
+The first cases uses are both using the website and the controller then it is primarily the controller and the API which is being tested.
 %%Test 9.
 \begin{table}[h]
 	\centering
@@ -24,14 +24,14 @@ These cases uses both the website and the controller:
 		\end{itemize}}
 		\\
 		\hline
-		Expected Results: & \parbox{.70\textwidth}{A managing user capable of logging into the TV Controller without loosing points. A regular User able to log into the TV controller while loosing points.}\\
+		Expected Results: & \parbox{.70\textwidth}{Adding of a regular user,tags, a `TV Controller' and the accompanying rights to use it..}\\
 		\hline
 		Steps: & \parbox{.70\textwidth}{
 		\begin{enumerate}
 			\item Log into the MOM website with lniel10 and test.
 			\item Attach the first Tag to the lniel10 profile.
 			\item Add the permissions that enables the use of all devices without expending points.
-			\item Create a profile 'Kevin' with the appropriate person information to act as a user.
+			\item Create a profile 'Kevin' with 60 points and other appropriate person information to act as a user.
 			\item Attach the second tag to Kevin.
 			\item Add controller TV into the system.
 			\item Add the permissions to log into the TV controller.
@@ -39,7 +39,7 @@ These cases uses both the website and the controller:
 		\end{enumerate}}
 		\\		
 		\hline
-		Result of Test: & \\
+		Result of Test: & \parbox{.70\textwidth}{The adding of controller, tag and profile were done with easier and without error. However when trying to run it with the controller it coursed several problems due to the evaluation of rules which had been out date. This is a critical error which would prevent any real communication between the controller and API. So before continuing the test this need to be fixed. When the test was resumed it worked and the results from step 8 can be found in Test AT001A.} \\
 		\hline
 		\end{tabular*}
 \end{table}
@@ -69,13 +69,13 @@ These cases uses both the website and the controller:
 		\hline
 		Steps: & \parbox{.70\textwidth}{
 		\begin{enumerate}
-			\item Log into Mom Website with lniel10 and test.
-			\item Add Rule to block the profile.
+			\item Log into Mom Website with 'lniel10' and 'test'.
+			\item Add Rule to block the profile try both with a timeperiod or true.
 			\item Use the controller to test if you can activate the Device.
 		\end{enumerate}}
 		\\		
 		\hline
-		Result of Test: & \\
+		Result of Test: &  \parbox{.70\textwidth}{This test failed at first with a when using making the condition true, but it succeeded with a time period. The reason for the failure was due to some changes happened late in the implementation in connection with the rules. It is a severe error because the user expect the user to be block, however the severity of the problem lessen compared to how likely they would use it or even find it. This lead to another observation at it is not clear how a rule can be made true which is a moderate error due since it would be a wasted time for the user but would they could find a way around it.}\\
 		\hline
 		\end{tabular*}
 \end{table}
@@ -113,14 +113,13 @@ These cases uses both the website and the controller:
 		\end{enumerate}}
 		\\		
 		\hline
-		Result of Test: & \\
+		Result of Test: & \parbox{.70\textwidth}{This test was a complete failure since the rule could not be made and when trying the user gets the message 'you are missing something'. This could cause much confusion for the user that would believe it was there mistake. There are no other way to make this kind of restriction so it is a severe error but the system could function without such rule.}\\
 		\hline
 		\end{tabular*}
 \end{table}
 
 
 %testcases to test only the controller
-These cases only uses the controller:
 %%Test 1
 \begin{table}[h]
 	\centering
@@ -155,11 +154,24 @@ These cases only uses the controller:
 			\item Confirm on the web browser.
 		\end{enumerate}}
 		\\
-
 		\hline
-		Result of Test: & \parbox{.70\textwidth}{First Iteration: Upon the first swipe the Arduino successfully logged in and changed state to 1 as expected. Confirmation also proved that to be status:GREEN. However, on the second swipe the Arduino would log out, but then immediately try to log in again with a corrupted Tag ID. All further attempts to log in would likewise fail do to Tag ID corruption.\\
-		We traced the problem of the corrupted tag ID to the lack of a null character '\0' in the char array that held the ID's. However the Arduino would still try to log in again, which was resolved by implementing a strcmp(newID, oldID) to evaluate if the tag was different.\\
-		Second Iteration: The Arduino performed as expected, succeding in logging users in and out.} \\
+		Result of Test: & see next page.\\
+		\hline
+		\end{tabular*}
+\end{table}
+		
+\begin{table}[h]
+	\centering
+		\begin{tabular*}{\textwidth}{|l|l|}
+		\hline
+		\hline
+		Name: & AT001A\\
+		\hline
+		Description: & \parbox{0.74\textwidth}{Log in and out with the Arduino and a valid Tag.}\\
+		\hline
+		Result of Test: & \parbox{.74\textwidth}{First Iteration: Upon the first swipe the Arduino successfully logged in and changed state to 1 as expected. Confirmation also proved that to be status:GREEN. However, on the second swipe the Arduino would log out, but then immediately try to log in again with a corrupted Tag ID. All further attempts to log in would likewise fail do to Tag ID corruption.
+		We traced the problem of the corrupted tag ID to the lack of a null character '\textbackslash 0' in the char array that held the ID's. However the Arduino would still try to log in again, which was resolved by implementing a strcmp(newID, oldID) to evaluate if the tag was different. This error is a critical problem since it is expected of the controller that it should be able to receive multiple log-in and log-out during the day.\\
+	Second Iteration: The Arduino performed as expected, succeeding in logging users in and out.} \\
 		\hline
 		\end{tabular*}
 \end{table}
@@ -195,7 +207,7 @@ These cases only uses the controller:
 			\item Confirm on the web browser that the device is marked status:RED for not running.
 		\end{enumerate}}
 		\\
-		Result of Test: & The Arduino performed as expected and successfully declined logging in.\\
+		Result of Test: & \parbox{.70\textwidth}{The Arduino performed as expected and successfully declined logging in.}\\
 		\hline
 		\end{tabular*}
 \end{table}
@@ -232,7 +244,7 @@ These cases only uses the controller:
 		\end{enumerate}}
 		\\
 		\hline
-		Result of Test: & The Arduino performed as expected successfully declined logging in.\\
+		Result of Test: & \parbox{.70\textwidth}{The Arduino performed as expected successfully declined logging in.}\\
 		\hline
 		\end{tabular*}
 \end{table}
@@ -269,7 +281,7 @@ These cases only uses the controller:
 		\end{enumerate}}
 		\\
 		\hline
-		Result of Test: & The Arduino performed as expected and successfully declined logging in.\\
+		Result of Test: & \parbox{.70\textwidth}{The Arduino performed as expected and successfully declined logging in.}\\
 		\hline
 		\end{tabular*}
 \end{table}
@@ -306,7 +318,8 @@ These cases only uses the controller:
 		\end{enumerate}}
 		\\
 		\hline
-		Result of Test: & The Arduino performed as expected and successfully logged user 1 off before logging user 2 in due to the corrections performed after Test AT001A.\\
+		Result of Test: & \parbox{.70\textwidth}{The Arduino performed as expected and successfully logged user 1 off before logging user 2 in due to the corrections performed after Test AT001A.}\\
+		\hline
 		\end{tabular*}
 \end{table}
 %%Test 6.
@@ -337,10 +350,11 @@ These cases only uses the controller:
 		\end{enumerate}}
 		\\
 		\hline
-		Result of Test: & Initially we believed there was a bug where the Arduino would freeze after the getStatus being called the second time, but we have not since been able to reproduce it and after seeing the Arduino run unhindered for a hours at the time we conclude that it is running as expected.\\
+		Result of Test: & \parbox{.70\textwidth}{Initially we believed there was a bug where the Arduino would freeze after the getStatus being called the second time, but we have not since been able to reproduce it and after seeing the Arduino run unhindered for a hours at the time we conclude that it is running as expected.}\\
 		\hline
 		\end{tabular*}
 \end{table}
+
 %%Test 7.
 \begin{table}[h]
 	\centering
@@ -373,10 +387,11 @@ These cases only uses the controller:
 		\end{enumerate}}
 		\\
 		\hline
-		Result of Test: & The Arduino performed as expected and remained logged in after the getStatus had been called.\\
+		Result of Test: & \parbox{.70\textwidth}{The Arduino performed as expected and remained logged in after the getStatus had been called.}\\
 		\hline
 		\end{tabular*}
 \end{table}
+
 %%Test 8.
 \begin{table}[h]
 	\centering
@@ -412,44 +427,8 @@ These cases only uses the controller:
 		\end{enumerate}}
 		\\		
 		\hline
-		Result of Test: & \parbox{.70\textwidth}{First Iteration: It turned out that the back end API did not actually support this feature. This has since been rectified. \\Second Iteration: The Arduino now performs as expected.}\\
+		Result of Test: & \parbox{.70\textwidth}{First Iteration: It turned out that the back end API did not actually support this every aspect of this feature. The error was if a permission granted the access then it was not checked whether he still had that permission. It is a moderate error since this can only happen once per permission lifetime. This has since been rectified. \\Second Iteration: The Arduino now performs as expected.}\\
 		\hline
 		\end{tabular*}
 \end{table}
 
-
-To try everything else in the Website go though WS004:
-%testing only website
-%%Test 12.
-\begin{table}[h]
-	\centering
-		\begin{tabular*}{\textwidth}{|l|l|}
-		\hline
-		\hline
-		Name: & WS004\\
-		\hline
-		Description: & \parbox{0.70\textwidth}{Try each additional functionality of the web site}\\
-		\hline
-		Requirements: & \parbox{0.70\textwidth}{
-		\begin{itemize}
-			\item A computer with Internet access.
-			\item The MOM website.
-		\end{itemize}}
-		\\
-		\hline
-		Steps: & \parbox{.70\textwidth}{
-		\begin{enumerate}
-			\item add chore 'vacume' with 10 point and add describtion 'the living room'
-			\item add chore 'dishwashing' with 10 points.
-			\item Kevin did chore 'dishwashing' give him points.
-			\item delete 'vacume' and 'dishwashing'.
-			\item one at the time edit something in tag, controller, and profile.
-			\item one at the time and in this order delete ever rule, permission, tag, controller.
-			\item delete 'Kevin'	
-		\end{enumerate}}
-		\\		
-		\hline
-		Result of Test: & \\
-		\hline
-		\end{tabular*}
-\end{table}
