--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -51,10 +51,13 @@ We want to primarily be validated on Visibility, Consistency, Control and Feedba
 \subsection{Presenting the Results}
 When presenting the results from the test cases it will be separated in two part. First the errors and irregularities of the program is presented. Then the Heuristic errors will be presented.\\
 Both will use the ranking of severity as is listed below:
+
+\begin{itemize}
     \item Minor - Minor cosmetic or consistency issue.
     \item Moderate - system can succeeded without loss of data but it would course irritation for the user. 
 		\item Severe - system loss functionality or data.
     \item Critical - system failure.
+\end{itemize}
 
 This ranking can then help priorities and identify the problems that should be corrected first.
 
@@ -63,7 +66,7 @@ This ranking can then help priorities and identify the problems that should be c
 \label{sec:testcase}
 In table \ref{tab:testcase} is one of the test cases that we made for testing the entire Media-Online Management. In the test case both apart of the Website and a controller are tested. The change been done in the web site should affect the controller.\\ 
  All test cases can be found in appendix \vref{appen:testSuite}.
-\\begin{table}[h]
+\begin{table}[h]
 	\centering
 		\begin{tabular*}{\textwidth}{|l|l|}
 		\hline
