Test Chapter name and found error in createRules.php

--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -1,4 +1,4 @@
-\chapter{Testing of the Media-Online Management}
+\chapter{Testing of MOM}
 There are different ways to evaluate the web interface e.g. an expert or user-based evaluation could be made. We would have preferred to make a user-based evaluation because this gives a valuable input from a person who might use the system. However, to make such a sufficient user evaluation then we should find at least people with children which is between 5-14 years old and that would take too much time.\fixme{We could talk about how we tried to get test-users in the begining of the project.} A user-based evaluation of the entire MOM system would be optimal if the user and his/hers family could try it for a week or two before we interview them about the system. Also a log for our benefit could be made during this time to see how they use it of course with the test persons permission. Therefore we can only evaluate the web interface. For this we use an expert evaluation called Heuristic evaluation. 
 
 \section{Heuristic evaluation in Theory}
