--- a/report/layout/preface.tex
+++ b/report/layout/preface.tex
@@ -1,7 +1,7 @@
 \chapter*{Preface}
 \label{chap:preface}
 %Preface goes here...
-This report is written by six students from the Department of Computer Science at Aalborg University, and is a project under the subject ``Internet of Things''. The four students are studying as Software Engineers at their 7th semester.\\
+This report is written by six students from the Department of Computer Science at Aalborg University, and is a project under the subject ``Internet of Things''. The six students are studying as Software Engineers at their 7th semester.\\
 \\
 This report serves as a suggestion of how to moderate children's increasing use of media.\\
 \\
