--- a/report/draft.tex
+++ b/report/draft.tex
@@ -63,6 +63,7 @@
 	\part{Reflection}
 	\input{text/conclusion.tex}
 	\input{text/futureWork.tex}
+	\input{text/honorablementions.tex}
 	
 	\bibliographystyle{plain}
 	\bibliography{kilder}
