--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -128,7 +128,7 @@ Before presenting the results from the test cases it need to be pointed out that
 	\label{tab:ResultsFromTryingOutTheTestcases}
 \end{table}
 
-A larger description of the test cases and the results can be found in Appendix \label{appen:testSuite}.
+A larger description of the test cases and the results can be found in Appendix \ref{appen:testSuite}.
 
 \subsection{Heuristic Errors}
  Apart from the functionalities tested in the described test cases, all pages in the website have been visited and their functionality tested. When doing this some Heuristic errors has been discovered. As mentioned earlier we prioritize Control, Consistency, Visibility and feedback.
